<resources>
    <string name="app_name">CalculationTest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home_title">Calculation Test</string>
    <string name="home_img_info" translatable="false">home img info</string>
    <string name="home_button">Enter</string>
    <string name="home_high_score">Highest score: %d</string>
    <string name="question_score">score: %d</string>
    <string name="question_answer">Enter your answer</string>


    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="button10">Clear</string>
    <string name="button11" translatable="false">0</string>
    <string name="button12">Submit</string>

    <string name="equal" translatable="false">=</string>
    <string name="questionMark" translatable="false">\?</string>
    <string name="win">YOU WIN</string>
    <string name="lose">YOU LOSE</string>

    <string name="win_score">You set a new record: %d</string>
    <string name="lose_score">Your score: %d</string>
    <string name="back">back</string>
    <string name="quit_title"> you sure you want to quit?</string>
    <string name="quit_cancel">cancel</string>
    <string name="quit_confirm">confirm</string>
    <string name="testing_title">testing</string>
    <string name="win_title">Well done</string>
    <string name="lose_title">Don\'t be discouraged</string>



</resources>

