<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.calculationtest.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.example.calculationtest.QuestionFragment"
        android:label="@string/testing_title"
        tools:layout="@layout/fragment_question">
        <action
            android:id="@+id/action_questionFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment" />
        <action
            android:id="@+id/action_questionFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.example.calculationtest.WinFragment"
        android:label="@string/win_title"
        tools:layout="@layout/fragment_win">
        <action
            android:id="@+id/action_winFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/loseFragment"
        android:name="com.example.calculationtest.LoseFragment"
        android:label="@string/lose_title"
        tools:layout="@layout/fragment_lose">
        <action
            android:id="@+id/action_loseFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>